# EveIndustryPlanner

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  Makefile  WORKSPACE  citadelReader.py  conquerableStationReader.py  create_constellations.sql  create_data.sql  create_history.sql  create_orders.sql  create_regions.sql  create_robust_price.sql  create_stations.sql  create_systems.sql  create_types.sql  include_graph.py  industry_jobs.py  last_history_updates.sh  objdump_to_cfg.py  readTypes.py  readUniverse.py  solver.py  sso.py  sso_script.sh
apps/: BUILD  CMakeLists.txt  history_reader.cpp  order_reader.cpp  server.cpp  station_reader.cpp
apps/main/: BUILD  CMakeLists.txt
apps/main/src/: assets.cpp  assets.h  blueprint_efficiency.h  blueprint_selection.cpp  blueprint_selection.h  blueprint_with_efficiency.cpp  blueprint_with_efficiency.h  buy.h  copying.h  decryptor_property.h  facility_costs.cpp  filter_jobs.cpp  filter_jobs.h  groups.cpp  groups.h  industry_limits.cpp  industry_limits.h  input_values.cpp  input_values.h  job.h  job_values.cpp  job_values.h  jobs.cpp  jobs.h  main.cpp  market_data.cpp  market_data.h  names.cpp  names.h  order.cpp  order.h  planetary.h  planner.cpp  planner.h  production.cpp  production.h  queries.cpp  queries.h  research.h  resource_base.h  (+17 more)
apps/price_reader/: BUILD  CMakeLists.txt  price_reader.cpp  price_reader.h
apps/pricing/: BUILD  CMakeLists.txt  archive_iterator.cpp  archive_iterator.h  buffer.cpp  file_system.cpp  getLine.cpp  getLine.h  json_reader.cpp  json_reader.h  json_writer.cpp  json_writer.h  json_writer_util.cpp  main.cpp  order.cpp  order.h  parse_datetime.cpp  parse_datetime.h  rapidjson_errstr.cpp  read_json_order.cpp  read_json_order.h  stochastic_programming_example.ipynb  tritanium_buy_order_prediction.ipynb
apps/pricing/include/: getLine.h  json_writer_util.h  order.h
apps/pricing/src/: archive_iterator.cpp  archive_iterator.h  buffer.h  file_system.cpp  file_system.h  getLine.cpp  json_reader.cpp  json_reader.h  json_writer.cpp  json_writer.h  json_writer_util.cpp  main.cpp  order.cpp  parse_datetime.cpp  rapidjson_errstr.cpp  rapidjson_errstr.h  read_json_order.cpp  read_json_order.h
apps/pricing/test/: BUILD  CMakeLists.txt  getLine_test.cpp
apps/pricing/unused/: memory_mapping.h  order_storage_deprecated.h  rapidjson_archive_stream.h  writer_wip.h
libs/: CMakeLists.txt
libs/Finalizer/: BUILD  CMakeLists.txt  Finalizer.h  test.cpp
libs/Finalizer/include/: Finalizer.h
libs/HTTPSRequestHandler/: BUILD  CMakeLists.txt  HTTPSRequestHandler.cpp
libs/HTTPSRequestHandler/include/: HTTPSRequestHandler.h
libs/HTTPSRequestHandler/src/: HTTPSRequestHandler.cpp
libs/QueryRunner/: BUILD  CMakeLists.txt  QueryRunner.cpp  QueryRunner.h
libs/QueryRunner/include/: QueryRunner.h
libs/QueryRunner/src/: QueryRunner.cpp
libs/Semaphore/: BUILD  CMakeLists.txt  Semaphore.cpp  Semaphore.h
libs/Semaphore/include/: Semaphore.h
libs/Semaphore/src/: Semaphore.cpp
libs/access_token/: BUILD  CMakeLists.txt  access_token.cpp  access_token.h
libs/access_token/src/: access_token.cpp
libs/assets/: BUILD  CMakeLists.txt  assets.cpp
libs/assets/include/: assets.h
libs/assets/src/: assets.cpp
libs/eve_stuff/: BUILD  CMakeLists.txt  outdatedHistories.cpp  outdatedHistories.h  outdatedOrders.cpp  outdatedOrders.h
libs/eve_stuff/include/: outdatedHistories.h  outdatedOrders.h
libs/eve_stuff/src/: outdatedHistories.cpp  outdatedOrders.cpp
libs/groups/: BUILD  CMakeLists.txt  groups.cpp  groups.h
libs/groups/include/: groups.h
libs/groups/src/: groups.cpp
libs/industry_resources/: BUILD  CMakeLists.txt  blueprint_efficiency.cpp  blueprint_with_efficiency.cpp  blueprint_with_efficiency.h  copying.h  decryptor_property.h  input_values.cpp  job.cpp  job.h  job_values.cpp  job_values.h  planetary.h  production.cpp  production.h  research.h  resource_base.cpp  resource_base.h  tech_level.h
libs/industry_resources/copying/: BUILD  CMakeLists.txt  copies.cpp  copies.h
libs/industry_resources/include/: blueprint_with_efficiency.h  copying.h  decryptor_property.h  input_values.h  job.h  job_values.h  planetary.h  production.h  research.h  resource_base.h  tech_level.h  tech_level_fwd.h
libs/industry_resources/production/: BUILD  CMakeLists.txt  products.cpp  products.h
libs/industry_resources/research/: BUILD  CMakeLists.txt  inventions.cpp  inventions.h
libs/industry_resources/resource_manager/: BUILD  CMakeLists.txt  stuff.cpp  stuff.h
libs/industry_resources/schematics/: BUILD  CMakeLists.txt  schematics.cpp  schematics.h
libs/industry_resources/src/: blueprint_efficiency.cpp  blueprint_with_efficiency.cpp  input_values.cpp  job.cpp  job_values.cpp  resource_base.cpp
libs/industry_resources/types/: BUILD  CMakeLists.txt  types.cpp  types.h
libs/infinity/: BUILD  CMakeLists.txt
libs/infinity/include/: infinity.h
libs/infinity/test/: BUILD  CMakeLists.txt  infinity_test.cpp
libs/market_data/: BUILD  CMakeLists.txt  market_data.cpp  market_data.h  order.cpp  order_serialization.h  sell.h
libs/market_data/include/: buy.h  market_data.h  order.h  order_serialization.h
libs/market_data/src/: market_data.cpp  order.cpp
libs/names/: BUILD  CMakeLists.txt  names.cpp  names.h
libs/names/include/: names.h
libs/names/src/: names.cpp
libs/profiling/: BUILD  CMakeLists.txt
libs/profiling/include/: profiling.h
libs/settings/: BUILD  CMakeLists.txt  blueprint_selection.cpp  blueprint_selection.h  facility_costs.cpp  facility_costs.h  industry_limits.cpp  industry_limits.h  queries.cpp  queries.h  settings.cpp  settings.h  skill_settings.cpp  skill_settings.h  trade_costs.cpp  trade_costs.h
libs/settings/include/: blueprint_selection.h  settings.h
libs/settings/src/: blueprint_selection.cpp  facility_costs.cpp  queries.cpp  settings.cpp  trade_costs.cpp
libs/skills/: BUILD  CMakeLists.txt  skills.cpp
libs/skills/src/: skills.cpp
libs/sqlite-util/: BUILD  CMakeLists.txt  sqlite.cpp
libs/sqlite-util/include/: sqlite.h
libs/yaml_fwd/: BUILD  CMakeLists.txt
(+38 files in other folders)
