add_subdirectory(Finalizer)
add_subdirectory(HTTPSRequestHandler)
add_subdirectory(QueryRunner)
add_subdirectory(Semaphore)
add_subdirectory(access_token)
add_subdirectory(assets)
add_subdirectory(eve_stuff)
add_subdirectory(groups)
add_subdirectory(industry_resources)
add_subdirectory(infinity)
add_subdirectory(market_data)
add_subdirectory(names)
add_subdirectory(profiling)
add_subdirectory(settings)
add_subdirectory(skills)
add_subdirectory(sqlite-util)
add_subdirectory(yaml_fwd)
