add_executable(main
  src/jobs.cpp
  src/main.cpp
  src/planner.cpp
  src/workspace.cpp
)

target_link_libraries(main
  PRIVATE
    Boost::filesystem
    assets::assets
    copying::copying
    groups::groups
    infinity::infinity
    jsoncpp::jsoncpp
    libsoplex
    market_data::market_data
    names::names
    production::production
    profiling::profiling
    pugixml
    research::research
    resource_manager::resource_manager
    schematics::schematics
    settings::settings
    skills::skills
    sqlite-util
    type_id::type_id
    types::types
    yaml-cpp
    yaml_fwd::yaml_fwd
)

if(BUILD_TESTING)
  add_subdirectory(test)
endif()
